# test-template

./: .gitignore  README.org  deno.json  package-lock.json  package-lock.json.bck  package.json  package.json.bck  rollup.config.mjs  tsconfig.json  tsconfig.json.bck
lib/: config.js  index.js  out_file.js  project.js
lib/template/: template.js  template_manager.js
lib/template/templates/cmake/: template_cmake.js
lib/template/templates/css/: template_css.js
src/: config.js  config.ts  cons.ts  index.js  index.ts  main.ts  out_file.js  out_file.ts  project.js  project.ts  template.js  template.ts
src/template/: ITemplate.ts  index.ts  template.js  template.ts  template_manager.js  template_manager.ts
src/template/templates/cmake/: template_cmake.js  template_cmake.ts
src/template/templates/css/: template_css.js  template_css.ts
src/templates/: template_cmake.ts
src/templates/cmake/: template_cmake.js  template_cmake.ts
src/templates/css/: template_css.js  template_css.ts
template_data/android_arm/: Makefile  helloworld.s
template_data/cmake/: CMakeLists.txt
template_data/css/: index.html  styles.css
template_data/gt/: CMakeLists.txt  MainWindow.h  main.cc  main.cpp
template_data/python_c_test/: config.toml
template_data/qt/: CMakeLists.txt
template_data/qt/src/: CMakeLists.txt  MainWindow.cpp  main.cpp
template_data/ts/: package.json
template_data/ts/src/: index.ts
template_data/windows/: CMakeLists.txt
